@@ -1,5 +1,10 @@
 2012-04-13  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* util/grub-setup.c (setup): Fix partition handling and blocklist
+	check.
+
+2012-04-13  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/lib/relocator.c (grub_relocator_alloc_chunk_align): Remove
 	redundant buggy overlap check.
 
